--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "breadcrumbs.enabled": false,
   "editor.glyphMargin": false,
-  "workbench.activityBar.location": "hidden",
+  "workbench.activityBar.location": "default",
   "editor.lineNumbers": "off",
   "files.eol": "\n", // Final de linha sempre será LF
 
